--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "drive_test_app",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "18.x"
+  }
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
